--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "generate": "drizzle-kit generate:pg",
     "start": "node dist/index.js",
     "build": "tsup",
+    "build:docker": "tsup src/index.ts",
     "dev": "tsup --watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [
@@ -21,10 +23,13 @@
   "private": true,
   "dependencies": {
     "discord.js": "^14.11.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.27.0",
+    "postgres": "^3.3.5"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "drizzle-kit": "^0.19.1",
     "tsup": "^7.0.0",
     "typescript": "^5.1.3"
   }
