--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "baseUrl": "./src"
   },
   "files": ["./src/index.ts"],
-  "include": ["./**/*.ts", "tsup.config.ts"],
+  "include": ["./**/*.ts", "tsup.config.ts", "drizzle.config.ts"],
   "exclude": ["node_modules", "dist"]
 }
