--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DISCORD_TOKEN=YOUR_TOKEN_HERE
 CLIENT_ID=YOUR_BOT_CLIENT_ID_HERE
 POSTGRES_CONNECTION_STRING=YOUR_POSTGRES_CONNECTION_STRING_HERE
+NPC_THUMBNAIL_URL=URL_TO_IMAGE_FOR_THUMBNAIL_HERE
